Disable overflow scrolling; make nav items all caps; fix jobs showing background image; copy fixes

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@ body {
   background-color: #d50099;
   color: white;
   height: 100%;
+  overflow: hidden;
+}
+
+body {
+  overflow: auto;
 }
 
 #root {
@@ -52,15 +57,15 @@ body {
   }
 }
 
-.overlay{
+.overlay {
   position: absolute;
-  content:" ";
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
+  content: " ";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: block;
   z-index: 0;
   background-color: #d50099;
-  opacity: .7;
+  opacity: 0.7;
 }
